# HA-SVKHeat

./: .gitignore  AGENTS.md  LICENSE  README.md  Readme.rst  SVK_Heatpump_Technical_Specification.md  analyze_ids.py  hacs.json  info.rst  pyproject.toml  pytest.ini  svk_heatpump_roo_prompt.md  test_api_behavior.py  test_client.py  test_device_response.py  test_digest_client.py  test_enhanced_parsing.py  test_fix_verification.py  test_fixed_schemas.py  test_json_parsing.py  test_live_connection.py  test_separator_change.py  test_voluptuous.py  test_voluptuous_detailed.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release-on-manifest-version.yml
.roo/commands/: commit.md  run.md
.roo/docs/HTML Samples/: Lodam - Dataset Defrost.html  Lodam - Dataset Display.html  Lodam - Dataset Extended Display.html  Lodam - Dataset Heating.html  Lodam - Dataset Heatpump.html  Lodam - Dataset Hot Watar.html  Lodam - Dataset Service.html  Lodam - Dataset Solar Panel.html  Lodam - Dataset User.html  Lodam - Firmwareupgrade.html  Lodam - Groups.html  Lodam - Systemview.html
.roo/docs/HTML Samples/Lodam - Systemview_files/: rdb.js.download  style.css
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
config/: configuration.yaml  home-assistant.log.1  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal
config/.storage/: assist_pipeline.pipelines  auth  auth_provider.homeassistant  core.area_registry  core.config  core.config_entries  core.device_registry  core.entity_registry  core.restore_state  core.uuid  http  http.auth  person  repairs.issue_registry
config/custom_components/svk_heatpump/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json
config/custom_components/svk_heatpump/translations/: da.json
custom_components/svk_heatpump/: __init__.py  api.py  binary_sensor.py  catalog.py  catalog.yaml  client.py  compat.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity_base.py  entity_factory.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/svk_heatpump/translations/: da.json  en.json
github/workflows/: release-on-manifest-version.yml
tools/: verify_translations.sh
